# bsdiff-rs

./: Cargo.toml  README.md
benches/: diff.rs
examples/: timed_diff.rs
src/: diff.rs
tests/: expected_diff  expected_diff_parallel  test.rs
