[package]
name = "bsdiff"
version = "0.2.1"
authors = ["pieterjan.briers@gmail.com", "Kornel <kornel@geekhood.net>"]
description = "Rust port of the bsdiff binary diffing algorithm."
readme = "README.md"
categories = ["compression"]
keywords = ["bspatch", "patch", "diff", "delta", "binary"]
license = "BSD-2-Clause"
homepage = "https://lib.rs/bsdiff"
repository = "https://github.com/space-wizards/bsdiff-rs"
edition = "2021"
include = [
    "src/*.rs",
    "benches/*.rs",
    "LICENSE",
    "README.md",
    "Cargo.toml",
]
rust-version = "1.80"

[features]
default = ["parallel"]
parallel = ["dep:rayon"]

[dependencies]
rayon = { version = "1.12", optional = true }

[dev-dependencies]
criterion = "0.5"
smallvec = { version = "1.15.0", features = ["write"] }

[[bench]]
name = "diff"
harness = false
